--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<h1>Hello Hotspot</h1>
-<p>This is your new web page</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>This is heading 1</h1>
+    <h2>this is heading 2</h2>
+</body>
+</html>
