amalitech image upload

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is heading 1</h1>
-    <h2>this is heading 2</h2>
+    <h1>Lorem, ipsum dolor.</h1>
+    <h2>Lorem ipsum dolor, sit amet consectetur adipisicing.</h2>
+    <img src="./train shot.PNG" alt="amalitech dashboard shot">
 </body>
 </html>
