--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="contact.html">contact us</a>
     <!-- adding images -->
     <h1>Lorem, ipsum dolor.</h1>
     <h2>Lorem ipsum dolor, sit amet consectetur adipisicing.</h2>
-    <img src="./train shot.PNG" width= "300" alt="amalitech dashboard shot">
+    <img src="./images/train shot.PNG" width= "300" alt="amalitech dashboard shot">
     <br>
     <br>
     <br>
     <h3>New google logo</h3>
-    <img src="./google.png" alt="google logo">
+    <img src="./images//google.png" alt="google logo">
     <a href="https://www.google.com/" target="_blank">visit us</a>
 
 </body>
