--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h4 id=top>top</h4>
     <a href="contact.html">contact us</a>
     <!-- adding images -->
     <h1>Lorem, ipsum dolor.</h1>
@@ -16,8 +17,103 @@
     <br>
     <br>
     <h3>New google logo</h3>
-    <img src="./images//google.png" alt="google logo">
-    <a href="https://www.google.com/" target="_blank">visit us</a>
+    <img src="./images/google.png" alt="google logo">
+    <a href="https://www.google.com/" target="_blank">
+        <br>
+        <br>
+        <br>
+        <img src="./images/google.png" alt="google image"></a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <a href="#top">Go to the top of page</a>
 
 </body>
 </html>
