sup, sub, strong, em

--- a/index.html
+++ b/index.html
@@ -18,102 +18,23 @@
     <br>
     <h3>New google logo</h3>
     <img src="./images/google.png" alt="google logo">
-    <a href="https://www.google.com/" target="_blank">
-        <br>
-        <br>fdfd
-        <br>
-        <img src="./images/google.png" alt="google image"></a>
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <a href="#top">Go to the top of page</a>
+    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. <sup>est totam ad 
+        itaque</sup>  Autem,
+        est totam ad itaque <sub>nam non</sub>  asperiores animi id voluptas ullam vitae, 
+        quasi aut quos voluptate? Esse vero unde veritatis ipsa reiciendis
+         aspernatur commodi perspiciatis?</h5>
 
+         Lorem ipsum dolor <strong>sit amet</strong>  consectetur, adipisicing elit. Et dolores in 
+         <em>voluptates</em>  ipsum repellendus.
+
+    <br>
+    <br>
+    <br>
+    <a href="https://www.google.com/" target="_blank">
+        <img src="./images/google.png" alt="google image"></a>
+   
 </body>
 </html>
