--- a/css/index.html
+++ b/css/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            color: green;
+        }
+        h2{
+            color: red;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>The boy is here</h1>
+    <h1>The boy is here</h1>
+    <h2 >The girl is coming</h2>
+    <h2 >She is here</h2>
+    <h3>shoot to go</h3>
 </body>
 </html>
