--- a/css/about.html
+++ b/css/about.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         h1{
-            color: green;
+            color: red;
         }
         /*h2{
             color: red;
@@ -15,12 +15,10 @@
     </style>
 </head>
 <body>
-    <a href="./about.html" >about page</a>
+    <a href="./index.html">home page</a>
     <!-- <h1 style = "color: blue;">The boy is here</h1> -->
-    <h1>The boy is here</h1>
-    <h1>The boy is here</h1>
-    <h2 >The girl is coming</h2>
-    <h2 >She is here</h2>
-    <h3>shoot to go</h3>
+    <h1>This is the about page</h1>
+    <h2 >Relax and enjoy</h2>
+    <h3>You will be served soon</h3>
 </body>
 </html>
