--- a/css/about.html
+++ b/css/about.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1{
+        
+        
+
+        /*h1{
             color: red;
         }
-        /*h2{
+        h2{
             color: red;
         }*/
     </style>
+    <link rel="stylesheet" href="e_css.css">
 </head>
 <body>
     <a href="./index.html">home page</a>
